# agentrecap

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
npm/agentrecap/: README.md  package.json
scripts/: build-binary  build-font-cache.py  prepare-npm-packages.py  pyinstaller_entrypoint.py  release
src/agentrecap/: analysis.py  cli.py  gather_session_data.py  plots.py  report.py
src/agentrecap/adapters/: __init__.py  claude_code.py  codex.py  common.py  cursor.py  opencode.py  vscode.py
src/agentrecap/templates/: report.css  report.html
