[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentrecap"
version = "0.1.1"
description = "Simple tool to analyze your local Claude Code and Codex sessions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
]

[project.scripts]
agentrecap = "agentrecap.cli:main"
