[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentrecap"
version = "0.3.0"
description = "Analyze local Codex, Claude Code, and OpenCode sessions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "pandas>=2.3.0",
]

[project.scripts]
agentrecap = "agentrecap.cli:main"
